# AgenticAnimatronics

./: .env_example  README.md  prounciation_dictionary.pls  pyproject.toml
agenticanimatronics/: conversational_agent.py  discord_handler.py  idle_mode.py  image_analysis.py  image_creation.py  initializers.py  llm.py  llm_speech_responder.py  main.py  mutable_microphone_stream.py  pirate_agent.py  pirate_chatbot_module.py
test/: conftest.py  test_idle_mode.py  test_llm.py  test_llm_speech_responder.py  test_mutable_microphone_stream.py  test_pirate_agent.py
