[project]
name = "agenticanimatronics"
version = "0.1.0"
description = ""
authors = [
    {name = "Sam Quiring"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "elevenlabs[pyaudio] (>=1.56.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry.scripts]
pirate-agent = 'agenticanimatronics.pirate_agent:run_pirate_agent'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
