[project]
name = "agenticanimatronics"
version = "0.1.0"
description = ""
authors = [
    {name = "Sam Quiring"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "elevenlabs[pyaudio] (>=1.56.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "litellm (>=1.67.6,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "assemblyai (>=0.40.2,<0.41.0)",
    "dspy (>=2.6.22,<3.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "noisereduce (>=3.0.3,<4.0.0)",
    "ruff (>=0.11.8,<0.12.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=8.4.1,<9.0.0)"
]

[tool.poetry.scripts]
pirate-agent = 'agenticanimatronics.pirate_agent:run_pirate_agent'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
